<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/id_titreResultConv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/titre_rensconv"


            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp">

            <TextView
                android:id="@+id/id_RensMont"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="40"
                android:text="@string/montantentrant"/>
            <TextView
                android:id="@+id/id_resultatMontant"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="40"
                />


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp">

            <TextView
                android:id="@+id/id_RensTxChange"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="40"
                android:text="@string/tx_change"/>
            <TextView
                android:id="@+id/id_resultTxChange"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="40"
                />


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp">

            <TextView
                android:id="@+id/id_RensResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="40"
                android:text="@string/montantsortant"/>
            <TextView
                android:id="@+id/id_resultat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="40"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/id_btn_retour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:layout_weight="70"
                android:text="@string/buttonRetour"
                android:textAllCaps="false"
                />
        </LinearLayout>



    </LinearLayout>
    <!--Mettre ici votre layout.-->
    <ListView android:id="@+id/list_navigation"
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#FFEEEEEE"
        android:choiceMode="singleChoice"
        android:entries="@array/tab_activites" />
</android.support.v4.widget.DrawerLayout>

